2001-03-14  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleConfigureRequest):
	fixed XMoveResize requests that leave the x/y position unchanged for
	windows with South/East gravity

	* fvwm/move_resize.c (DoSnapAttract):
	fixed core dump

2001-03-12  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/Picture.c (GetColor):
	allocate colours from a colour set
	removed unused variable

	* fvwm/move_resize.c (moveLoop):
	removed debug code
	(MoveOutline):
	(get_outline_rects):
	reactivated wire frame interleaving to reduce flickering

	* libs/defaults.h:
	* fvwm/menus.c (paint_menu):
	moved a macro to defaults.h

2001-03-11  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (SetSnapAttraction):
	removed debug code

	* fvwm/icccm2.c (SetupICCCM2):
	(CloseICCCM2):
	* fvwm/fvwm.h:
	* fvwm/menus.c (do_menu):
	(make_menu_window):
	* fvwm/fvwm.c (main):
	(main):
	(MappedNotOverride):
	* fvwm/icccm2.c (SetupICCCM2):
	* fvwm/virtual.c (initPanFrames):
	* fvwm/menus.c (MenuInteraction):
	* fvwm/icons.c (CreateIconWindow):
	(CreateIconWindow):
	* fvwm/add_window.c (setup_parent_window):
	(setup_button_windows):
	(setup_decor_window):
	(setup_resize_handle_windows):
	(AddWindow):
	(setup_frame_window):
	* fvwm/events.c (HandleReparentNotify):
	(HandleMapNotify):
	* fvwm/add_window.h:
	all window event masks are defined as macros in events.h
	frame window selects VisibilityNotifyMask so that the raised/visible
	conditions work again

	* vms/make_fvwm.mms (BaseDirFix):
	* todo-2.4:
	* sample.fvwmrc/system.fvwm2rc-sample-95:
	* sample.fvwmrc/decor_examples:
	* libs/vpacket.h:
	* INSTALL.fvwm:
	* INSTALL:
	* fvwm/virtual.c:
	* fvwm/module_interface.c:
	changed some comments so that they don't look like cvs conflict markers

	* fvwm/move_resize.c (SetSnapAttraction):
	(DoSnapAttract):
	* libs/defaults.h (DEFAULT_SNAP_GRID_X):
	fixed a bug in SnapAttraction parsing
	cut down CPU requirements when verious parts of SnapAttraction are