@@ -1,5 +1,10 @@
 2001-03-14  Dominik Vogt  <dominik.vogt@gmx.de>
 
+	* libs/WinMagic.c (SlideWindow):
+	better math to protect against integer overflows
+	(SlideWindow):
+	fixed percent list sliding spec
+
 	* fvwm/events.c (HandleConfigureRequest):
 	fixed XMoveResize requests that leave the x/y position unchanged for
 	windows with South/East gravity
